--- a/blowdry.html
+++ b/blowdry.html
@@ -66,9 +66,9 @@
     <div id="section1" class="container">
         <div class="row">
             <div class="col-sm-6">
-                        <a href="/" target="">
-                                <i class="fa fa-long-arrow-left"></i> Home
-                            </a>
+                <a href="/" target="">
+                    <i class="fa fa-long-arrow-left"></i> Home
+                </a>
                 <p>
                     <b>Short Hair 35mins
                         <span class="pull-right">€28</span>
@@ -87,12 +87,13 @@
                     <b>Red Carpet Upstyle 60mins
                         <span class="pull-right">€48</span>
                     </b>
+                </br>
                     <i>Anytime you want show stopping luscious look, red carpet blow dry and upstyle is the one for you.</i>
-                    <br>
+
 
                     <i>
-                        <br> From Monday to Wednesday, with a valid student card, you can avail of a crazy discount on a Hair
-                        Cut and Blow Dry of your choice.</i>
+                        <br> From Monday to Wednesday, with a valid student card, you can avail of a crazy discount on a
+                        Hair Cut and Blow Dry of your choice.</i>
                 </p>
             </div>
             <div class="col-sm-6">
@@ -131,7 +132,7 @@
                             </a>
                         </li>
                         <li>
-                          <a href="mailto:hillarysayshi@gmail.com" target="_blank">
+                            <a href="mailto:hillarysayshi@gmail.com" target="_blank">
                                 <i class="fa fa-envelope"></i>
                             </a>
                         </li>
