--- a/hair-color.html
+++ b/hair-color.html
@@ -71,29 +71,29 @@
                             </a>
                 <p>
                     <b>HIGHLIGHTS: FULL HEAD
-                        <span class="pull-right">€80</span>
+                        <span class="pull-right">€130</span>
                     </b>
                     <br>
                     <i></i>
                 </p>
                 <p>
                     <b>HIGHLIGHTS: HALF HEAD
-                        <span class="pull-right">€40</span>
+                        <span class="pull-right">€100</span>
                     </b>
                     <br>                  
                         <i></i>
                 </p>
                 <p>
-                    <b> T/BAR HALO T/Bar
-                        <span class="pull-right">€35</span>
+                    <b> T/BAR HALO
+                        <span class="pull-right">€80</span>
                     </b>
                     <br>
                     <i>
                         Halo highlights/lowlights show through underneath the top layers.</i>
                 </p>
                 <p>
-                    <b> TINTS/SEMIS: INOA
-                        <span class="pull-right">€35</span>
+                    <b> INOA FULL
+                        <span class="pull-right">€90</span>
                     </b>
                     <br>
                     <i>
@@ -124,7 +124,7 @@
                         Touch up colour.</i>
                 </p>
                 <p>
-                    <b> T/BAR TINT T/Bar
+                    <b> T/BAR TINT
                         <span class="pull-right">€42</span>
                     </b>
                     <br>
@@ -132,7 +132,7 @@
                         Halo block colour thats shows through underneath the top layers.</i>
                 </p>
                 <p>
-                    <b> BALAYAGE
+                    <b> BALAYAGE FROM
                         <span class="pull-right">€95</span>
                     </b>
                     <br>
