--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <td class="opens">Closed</td>
                             </tr>
                         </table>
-                        <button style="cursor: pointer;" title="Make an Apointment Online" data-appointlet="u387">Make an Apointment Online</button>
+                        <!-- <button style="cursor: pointer;" title="Make an Apointment Online" data-appointlet="u387">Make an Apointment Online</button> -->
                     </div>
                 </section>
                 <p class="contact-details">
