--- a/nails.html
+++ b/nails.html
@@ -94,6 +94,7 @@
                         GEL MANICURE (SPEEDY) 25min
                         <span class="pull-right">€35</span>
                     </b>
+                    <br>
                     <i>Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Manicure. Cracking, peeling or chipping
                         minimal. No drying time needed as UV light instantly dries nails.</i>
 
@@ -103,6 +104,7 @@
                         GEL PEDICURE (SPEEDY) 30min
                         <span class="pull-right">€45</span>
                     </b>
+                    <br>
                     <i>
                         Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Pedicure. Cracking, peeling or chipping minimal. No drying
                         time needed as UV light instantly dries nails.
@@ -112,6 +114,7 @@
                     <b>GEL MANICURE (HIGH GLOSS) 45min
                         <span class="pull-right">€49</span>
                     </b>
+                    <br>
                     <i>
                         High Gloss and High Shine, long lasting colour or french Gel/Acrylic Manicure. High Gloss are chip resistant. No drying time
                         needed as UV light instantly dries nails.</i>
@@ -120,6 +123,7 @@
                     <b>GEL PEDICURE (HIGH GLOSS) 55min
                         <span class="pull-right">€55</span>
                     </b>
+                    <br>
                     <i>
                         High Gloss and High Shine, long lasting colour or french Gel/Acrylic Manicure. High Gloss are chip resistant. No drying time
                         needed as UV light instantly dries nails </i>
@@ -130,6 +134,7 @@
                         GEL NAILS, CLEAR OR COLOUR FULL SET
                         <span class="pull-right">€55</span>
                     </b>
+                    <br>
                     <i>
                         Elongate you natural nails with a full set of Gel Nail Extensions.</i>
 
@@ -139,15 +144,27 @@
                         GEL NAILS, FRENCH FULL SET
                         <span class="pull-right">€65</span>
                     </b>
+                    <br>
                     <i>
                         Elongate you natural nails with a full set of Gel Nail Extensions.</i>
 
                 </p>
                 <p>
                     <b>
-                        GEL NAILS, CLEAR OR COLOUR REFILL
+                        GEL NAILS, FULL SET COLOUR
+                        <span class="pull-right">€60</span>
+                    </b>
+                    <br>
+                    <i>
+                        Fill the gap.
+                    </i>
+                </p>
+                <p>
+                    <b>
+                        CLEAR OR COLOR REFILL
                         <span class="pull-right">€45</span>
                     </b>
+                    <br>
                     <i>
                         Fill the gap.
                     </i>
@@ -155,8 +172,9 @@
                 <p>
                     <b>
                         GEL NAILS, FRENCH REFILL
-                        <span class="pull-right">€45</span>
+                        <span class="pull-right">€50</span>
                     </b>
+                    <br>
                     <i>
                         Fill the gap.
                     </i>
@@ -165,6 +183,7 @@
                     <b> GEL NAILS, FULL SET WITH SHELLAC OVER
                         <span class="pull-right">€69</span>
                     </b>
+                    <br>
                     <i>
                         Get an extra slick look to your nails by adding a Shellac polish over your Gel Extensions. No drying time as Shellac polish
                         dries instantly with a UV light.</i>
@@ -172,21 +191,13 @@
                 <p>
                     <b>
                         GEL NAILS, REFILL WITH SHELLAC
-                        <span class="pull-right">€69</span>
-                    </b>
-                    <i>
-                        Fill the gap.
-                    </i>
-                </p>
-                <p>
-                    <b>
-                        REFILL WITH SHELLAC
                         <span class="pull-right">€53</span>
                     </b>
+                    <br>
                     <i>
                         Fill the gap.
                     </i>
-                </p>
+                </p>       
 
 
             </div>
