--- a/blowdry.html
+++ b/blowdry.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="website-v2/">
                     <img id="logo-nav" class="logo-nav img-responsive" alt="logo" src="img/hillary-logo.png">
                     <img class="logo-head img-responsive" alt="logo" src="img/hillary-logo.png">
                 </a>
@@ -66,7 +66,7 @@
     <div id="section1" class="container">
         <div class="row">
             <div class="col-sm-6">
-                <a href="/" target="">
+                <a href="website-v2/">
                     <i class="fa fa-long-arrow-left"></i> Home
                 </a>
                 <p>
