--- a/blowdry.html
+++ b/blowdry.html
@@ -70,34 +70,41 @@
                     <i class="fa fa-long-arrow-left"></i> Home
                 </a>
                 <p>
-                    <b>Short Hair 35mins
+                    <b>DRY BLOWDRY
+                        <span class="pull-right">€20</span>
+                        <br>20MINS
+
+                        </br>
+                    </b>
+                    <i>Vamp up your tresses with a spritz and blow dry.</i>
+                </p>
+                <p>
+                    <b>SHORT HAIR
                         <span class="pull-right">€28</span>
+                        <br>35MINS
                         </br>
                     </b>
                     <i>Your tresses washed and blow-dried your preferred way, voluminous, straight, or wavy.</i>
                 </p>
                 <p>
-                    <b>Long Hair 45mins
+                    <b>LONG HAIR
                         <span class="pull-right">€38</span>
+                        <br>45MINS
                     </b>
                     </br>
                     <i>Your tresses washed and blow-dried your preferred way, voluminous, straight, or wavy.</i>
                 </p>
                 <p>
-                    <b>Red Carpet Upstyle 60mins
-                        <span class="pull-right">€48</span>
+                    <b>RED CARPET UPSTYLE
+                        <span class="pull-right">From €50</span>
+                        <br>60MINS
                     </b>
-                </br>
+                    </br>
                     <i>Anytime you want show stopping luscious look, red carpet blow dry and upstyle is the one for you.</i>
-
-
-                    <i>
-                        <br> From Monday to Wednesday, with a valid student card, you can avail of a crazy discount on a
-                        Hair Cut and Blow Dry of your choice.</i>
                 </p>
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/feature-1.jpg" alt="feature">
+                <img class="img-responsive" src="img/Short-Red-Hair-Shake.gif" alt="feature">
             </div>
         </div>
     </div>
@@ -112,25 +119,25 @@
                 <div class="col-md-6">
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/" target="_blank">
+                            <a href="https://twitter.com/IeHillary" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/hillarysayshii/" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/" target="_blank">
+                            <a href=" https://www.instagram.com/hillary.ie/" target="_blank">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.snapchat.com/" target="_blank">
-                                <i class="fa fa-snapchat"></i>
-                            </a>
-                        </li>
+                                <a href="https://www.snapchat.com/add/hillary.ie" target="_blank">
+                                    <i class="fa fa-snapchat"></i>
+                                </a>
+                            </li>
                         <li>
                             <a href="mailto:hillarysayshi@gmail.com" target="_blank">
                                 <i class="fa fa-envelope"></i>
