--- a/index.html
+++ b/index.html
@@ -78,39 +78,50 @@
     <section id="chooseUs" class="benefits section-spacing text-center">
         <div class="container">
             <header class="section-header text-center">
-              <h1>Coming Soon To Ranelagh Village</h1>
+                <h1>Coming Soon To Ranelagh Village</h1>
+                <img style="background-color: #f6b6ea;padding:10px;" src="img/hillary-logo.png" alt="">
                 <p>59 Ranelagh Dublin 6 D06 E2C2</p>
-                <h3>What we do...</h3>
+
+                <a href="tel:+35314417168" class="Blondie">
+                    +353 1 441 7168
+                </a>
+                <br>
+                <a href="tel:+35315473623" class="Blondie">
+                    +353 1 547 3623
+                </a>
             </header>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-xs-6">
-                        <div class="dummy"></div>
-                        <a href="cut.html" class="thumbnail white-text">
-                            <p>CUT</p>
-                            <img class="feature-img" src="img/scissors.svg" alt="benefits of product">
-                        </a>
-                    </div>
-                    <div class="col-md-3 col-xs-6">
-                        <div class="dummy"></div>
-                        <a href="blowdry.html" class="thumbnail white-text">
-                            <p>BLOWDRY</p>
-                            <img class="feature-img" src="img/Blowdry-1.svg" alt="benefits of product">
-                        </a>
-                    </div>
-                    <div class="col-md-3 col-xs-6">
-                        <div class="dummy"></div>
-                        <a href="nails.html" class="thumbnail white-text">
-                            <p>NAILS</p>
-                            <img class="feature-img" src="img/nails.svg" alt="benefits of product">
-                        </a>
-                    </div>
-                    <div class="col-md-3 col-xs-6">
-                        <div class="dummy"></div>
-                        <a href="hair-color.html" class="thumbnail white-text">
-                            <p>HAIR COLOUR</p>
-                            <img class="feature-img" src="img/paint-tube.svg" alt="benefits of product">
-                        </a>
+                    <div class="col-md-8 col-md-offset-2 col-xs-12">
+                        <h3>What we do...</h3>
+                        <div class="col-xs-6">
+                            <div class="dummy"></div>
+                            <a href="cut.html" class="thumbnail white-text">
+                                <p>CUT</p>
+                                <img class="feature-img" src="img/scissors.svg" alt="benefits of product">
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="dummy"></div>
+                            <a href="blowdry.html" class="thumbnail white-text">
+                                <p>BLOWDRY</p>
+                                <img class="feature-img" src="img/Blowdry-1.svg" alt="benefits of product">
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="dummy"></div>
+                            <a href="nails.html" class="thumbnail white-text">
+                                <p>NAILS</p>
+                                <img class="feature-img" src="img/nails.svg" alt="benefits of product">
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="dummy"></div>
+                            <a href="hair-color.html" class="thumbnail white-text">
+                                <p>HAIR COLOUR</p>
+                                <img class="feature-img" src="img/paint-tube.svg" alt="benefits of product">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -192,7 +203,7 @@
                             </tr>
                             <tr id="Saturday" itemprop="openingHours" title="Open Saturday at 10am to 6pm">
                                 <td>Saturday</td>
-                                <td class="opens">9:00</td>
+                                <td class="opens">09:00</td>
                                 <td>-</td>
                                 <td class="closes">05:30</td>
                             </tr>
@@ -228,23 +239,23 @@
                 <div class="col-md-6">
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/" target="_blank">
+                            <a href="https://twitter.com/IeHillary" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/hillarysayshii/" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/" target="_blank">
+                            <a href=" https://www.instagram.com/hillary.ie/" target="_blank">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/hilary-o-reilly-22363a7b/" target="_blank">
-                                <i class="fa fa-linkedin"></i>
+                            <a href="https://www.snapchat.com/add/hillary.ie" target="_blank">
+                                <i class="fa fa-snapchat"></i>
                             </a>
                         </li>
                         <li>
