--- a/nails.html
+++ b/nails.html
@@ -66,13 +66,14 @@
     <div id="section1" class="container">
         <div class="row">
             <div class="col-sm-6">
-               <a href="index.html">
-                                <i class="fa fa-long-arrow-left"></i> Home
-                            </a>
+                <a href="index.html">
+                    <i class="fa fa-long-arrow-left"></i> Home
+                </a>
                 <p>
                     <b>
-                        MANICURE 15min
+                        MANICURE
                         <span class="pull-right">€15</span>
+                        <br>15MINS
                     </b>
                     <br>
                     <i>Simple, Basic, Beautifully applied, colour or french Manicure. For best results allow +10 minute drying
@@ -81,53 +82,24 @@
                 </p>
                 <p>
                     <b>
-                        PEDICURE 20min
-                        <span class="pull-right">€20</span>
+                        GEL MANICURE (SPEEDY)
+                        <span class="pull-right">€25</span>
+                        <br>25MINS
                     </b>
                     <br>
-                    <i>Simple, Basic, Beautifully applied, colour or french Manicure. For best results allow +10 minute drying
-                        time.
-                    </i>
-                </p>
-                <p>
-                    <b>
-                        GEL MANICURE (SPEEDY) 25min
-                        <span class="pull-right">€35</span>
-                    </b>
-                    <br>
-                    <i>Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Manicure. Cracking, peeling or chipping
-                        minimal. No drying time needed as UV light instantly dries nails.</i>
+                    <i>Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Manicure.
+                        <br> Cracking, peeling or chipping minimal. No drying time needed as UV light instantly dries nails.</i>
 
                 </p>
                 <p>
-                    <b>
-                        GEL PEDICURE (SPEEDY) 30min
-                        <span class="pull-right">€45</span>
-                    </b>
-                    <br>
-                    <i>
-                        Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Pedicure. Cracking, peeling or chipping minimal. No drying
-                        time needed as UV light instantly dries nails.
-                    </i>
-                </p>
-                <p>
-                    <b>GEL MANICURE (HIGH GLOSS) 45min
-                        <span class="pull-right">€49</span>
+                    <b>GEL MANICURE (HIGH GLOSS)
+                        <span class="pull-right">€50</span>
+                        <br>45MINS
                     </b>
                     <br>
                     <i>
                         High Gloss and High Shine, long lasting colour or french Gel/Acrylic Manicure. High Gloss are chip resistant. No drying time
                         needed as UV light instantly dries nails.</i>
-                </p>
-                <p>
-                    <b>GEL PEDICURE (HIGH GLOSS) 55min
-                        <span class="pull-right">€55</span>
-                    </b>
-                    <br>
-                    <i>
-                        High Gloss and High Shine, long lasting colour or french Gel/Acrylic Manicure. High Gloss are chip resistant. No drying time
-                        needed as UV light instantly dries nails </i>
-
                 </p>
                 <p>
                     <b>
@@ -146,22 +118,12 @@
                     </b>
                     <br>
                     <i>
-                        Elongate you natural nails with a full set of Gel Nail Extensions.</i>
-
-                </p>
-                <p>
-                    <b>
-                        GEL NAILS, FULL SET COLOUR
-                        <span class="pull-right">€60</span>
-                    </b>
-                    <br>
-                    <i>
                         Fill the gap.
                     </i>
                 </p>
                 <p>
                     <b>
-                        CLEAR OR COLOR REFILL
+                        GEL NAILS, CLEAR OR COLOUR REFILL
                         <span class="pull-right">€45</span>
                     </b>
                     <br>
@@ -197,12 +159,48 @@
                     <i>
                         Fill the gap.
                     </i>
-                </p>       
+                </p>
+                <p>
+                    <b>
+                        PEDICURE
+                        <span class="pull-right">€20</span>
+                        <br>20MINS
+                    </b>
+                    <br>
+                    <i>Simple, Basic, Beautifully applied, colour or french Pedicure. For best results allow +10 minute drying
+                        time.
+                    </i>
+                </p>
+                <p>
+                    <b>
+                        GEL PEDICURE (SPEEDY)
+                        <span class="pull-right">€45</span>
+                        <br>30MINS
+                    </b>
+                    <br>
+                    <i>Gorgeous, High Shine, long lasting colour or french Gel/Acrylic Pedicure.
+                        <br> Cracking, peeling or chipping minimal.
+                        <br> No drying time needed as UV light instantly dries nails.
+                    </i>
+                </p>
+                <p>
+                    <b>
+                        GEL PEDICURE (HIGH GLOSS)
+                        <span class="pull-right">€55</span>
+                        <br>30MINS
+                    </b>
+                    <br>
+                    <i>High Gloss and High Shine, long lasting colour or french Gel/Acrylic Manicure.
+                        <br> High Gloss are chip resistant.
+                        <br> No drying time needed as UV light instantly dries nails.
+                    </i>
+                </p>
+
 
 
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/feature-1.jpg" alt="feature">
+                <img class="img-responsive" src="img/HairFlip.gif" alt="feature">
             </div>
         </div>
     </div>
@@ -216,27 +214,27 @@
                 <div class="col-md-6">
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/" target="_blank">
+                            <a href="https://twitter.com/IeHillary" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/hillarysayshii/" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/" target="_blank">
+                            <a href=" https://www.instagram.com/hillary.ie/" target="_blank">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.snapchat.com/" target="_blank">
+                            <a href="https://www.snapchat.com/add/hillary.ie" target="_blank">
                                 <i class="fa fa-snapchat"></i>
                             </a>
                         </li>
                         <li>
-                           <a href="mailto:hillarysayshi@gmail.com" target="_blank">
+                            <a href="mailto:hillarysayshi@gmail.com" target="_blank">
                                 <i class="fa fa-envelope"></i>
                             </a>
                         </li>
