--- a/hair-color.html
+++ b/hair-color.html
@@ -66,22 +66,27 @@
     <div id="section1" class="container">
         <div class="row">
             <div class="col-sm-6">
-                        <a href="index.html">
-                                <i class="fa fa-long-arrow-left"></i> Home
-                            </a>
+                <a href="index.html">
+                    <i class="fa fa-long-arrow-left"></i> Home
+                </a>
                 <p>
-                    <b>HIGHLIGHTS: FULL HEAD
+                    <b>
+                        <i>
+                            <h4>HIGHLIGHTS:</h4>
+                        </i>
+                    </b>
+                    <b>FULL HEAD HIGHLIGHTS
                         <span class="pull-right">€130</span>
                     </b>
                     <br>
                     <i></i>
                 </p>
                 <p>
-                    <b>HIGHLIGHTS: HALF HEAD
+                    <b>HALF HEAD HIGHLIGHTS
                         <span class="pull-right">€100</span>
                     </b>
-                    <br>                  
-                        <i></i>
+                    <br>
+                    <i></i>
                 </p>
                 <p>
                     <b> T/BAR HALO
@@ -92,6 +97,12 @@
                         Halo highlights/lowlights show through underneath the top layers.</i>
                 </p>
                 <p>
+                    <b>
+                        <i>
+                            <h4>TINTS/SEMIS:</h4>
+                        </i>
+                    </b>
+
                     <b> INOA FULL
                         <span class="pull-right">€90</span>
                     </b>
@@ -101,7 +112,7 @@
                 </p>
                 <p>
                     <b> INOA ROOTS
-                        <span class="pull-right">€80</span>
+                        <span class="pull-right">€70</span>
                     </b>
                     <br>
                     <i>
@@ -141,7 +152,7 @@
                 </p>
                 <p>
                     <b> TONER
-                        <span class="pull-right">€15</span>
+                        <span class="pull-right">Between €15 - €20</span>
                     </b>
                     <br>
                     <i>
@@ -149,7 +160,7 @@
                 </p>
                 <p>
                     <b> CHROMATIVE
-                        <span class="pull-right">€20</span>
+                        <span class="pull-right">€50</span>
                     </b>
                     <br>
                     <i>
@@ -157,7 +168,7 @@
                 </p>
                 <p>
                     <b> TREATMENTS
-                        <span class="pull-right">€15</span>
+                        <span class="pull-right">Between €15 - €20</span>
                     </b>
                     <br>
                     <i>
@@ -167,7 +178,7 @@
 
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/feature-1.jpg" alt="feature">
+                <img class="img-responsive" src="img/Webp-net-gifmaker.gif" alt="feature">
             </div>
         </div>
     </div>
@@ -181,27 +192,27 @@
                 <div class="col-md-6">
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/" target="_blank">
+                            <a href="https://twitter.com/IeHillary" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/hillarysayshii/" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/" target="_blank">
+                            <a href=" https://www.instagram.com/hillary.ie/" target="_blank">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.snapchat.com/" target="_blank">
-                                <i class="fa fa-snapchat"></i>
-                            </a>
-                        </li>
+                                <a href="https://www.snapchat.com/add/hillary.ie" target="_blank">
+                                    <i class="fa fa-snapchat"></i>
+                                </a>
+                            </li>
                         <li>
-                      <a href="mailto:hillarysayshi@gmail.com" target="_blank">
+                            <a href="mailto:hillarysayshi@gmail.com" target="_blank">
                                 <i class="fa fa-envelope"></i>
                             </a>
                         </li>
