--- a/blowdry.html
+++ b/blowdry.html
@@ -104,7 +104,7 @@
                 </p>
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/Short-Red-Hair-Shake.gif" alt="feature">
+                <img class="img-responsive" src="img/HairFlip.gif" alt="feature">
             </div>
         </div>
     </div>
