--- a/cut.html
+++ b/cut.html
@@ -133,7 +133,7 @@
 
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/Bowie-Zoomed-out.gif" alt="feature">
+                <img class="img-responsive" src="img/Short-Red-Hair-Shake.gif" alt="feature">
             </div>
         </div>
     </div>
