--- a/hair-color.html
+++ b/hair-color.html
@@ -178,7 +178,7 @@
 
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/Webp-net-gifmaker.gif" alt="feature">
+                <img class="img-responsive" src="img/Bowie-Zoomed-out.gif" alt="feature">
             </div>
         </div>
     </div>
