--- a/nails.html
+++ b/nails.html
@@ -200,7 +200,7 @@
 
             </div>
             <div class="col-sm-6">
-                <img class="img-responsive" src="img/HairFlip.gif" alt="feature">
+                <img class="img-responsive" src="img/Webp-net-gifmaker.gif" alt="feature">
             </div>
         </div>
     </div>
