--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <img style="background-color: #f6b6ea;padding:10px;" src="img/hillary-logo.png" alt="">
                 <p>59 Ranelagh Dublin 6 D06 E2C2</p>
 
-                <a href="tel:+35314417168" class="Blondie">
+                <a href="tel:+35314417168">
                     +353 1 441 7168
                 </a>
                 <br>
-                <a href="tel:+35315473623" class="Blondie">
+                <a href="tel:+35315473623">
                     +353 1 547 3623
                 </a>
             </header>
@@ -142,16 +142,20 @@
     <section class="bio-section section-spacing text-center" id="bio">
         <div class="container">
             <header class="section-header">
-                <h3>HILLARY’s bio</h3>
-                <p>Person who created this awesome salon</p>
+                <h3>About HILLARY</h3>            
             </header>
             <div class="row">
                 <div class="col-md-12">
-                    <p>When I was a little girl I always wanted to make people feel beautiful. I made that happen through hard
+                    <p class="about">When I was a little girl I always wanted to make people feel beautiful. I made that happen through hard
                         work and energy. Working all around the world with the best of the best. Now I want to share my knowledge
                         in a beautiful environment, surrounding myself with a great team.</p>
-                    <p>Have a question? Give us a call
-                        <a href="tel:+"> 01 123 4569</a>.</p>
+                    <p>Have a question? Give us a call on 
+                        <a href="tel:+35314417168">
+                            +353 1 441 7168
+                        </a> or on                      
+                        <a href="tel:+35315473623">
+                            +353 1 547 3623
+                        </a>.</p>
                     <br>
                     <a href="https://www.linkedin.com/in/hilary-o-reilly-22363a7b/" target="_blank" class="btn">LinkedIn</a>
                 </div>
