--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <!-- <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300,700" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+<head>    
+    
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
