--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>    
-    
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+<head>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -142,17 +142,17 @@
     <section class="bio-section section-spacing text-center" id="bio">
         <div class="container">
             <header class="section-header">
-                <h3>About HILLARY</h3>            
+                <h3>About HILLARY</h3>
             </header>
             <div class="row">
                 <div class="col-md-12">
-                    <p class="about">When I was a little girl I always wanted to make people feel beautiful. I made that happen through hard
-                        work and energy. Working all around the world with the best of the best. Now I want to share my knowledge
-                        in a beautiful environment, surrounding myself with a great team.</p>
-                    <p>Have a question? Give us a call on 
+                    <p class="about">When I was a little girl I always wanted to make people feel beautiful. I made that
+                        happen through hard work and energy. Working all around the world with the best of the best. Now
+                        I want to share my knowledge in a beautiful environment, surrounding myself with a great team.</p>
+                    <p>Have a question? Give us a call on
                         <a href="tel:+35314417168">
                             +353 1 441 7168
-                        </a> or on                      
+                        </a> or on
                         <a href="tel:+35315473623">
                             +353 1 547 3623
                         </a>.</p>
@@ -216,7 +216,7 @@
                                 <td class="opens">Closed</td>
                             </tr>
                         </table>
-                        <!-- <button style="cursor: pointer;" title="Make an Apointment Online" data-appointlet="u387">Make an Apointment Online</button> -->
+
                     </div>
                 </section>
                 <p class="contact-details">
@@ -279,7 +279,7 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/script.min.js"></script>
     <script src="js/opening-hours.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALevkrc08Ax14PFTn85gNY8Buqpv1X6Q8&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAn2uF77HRDupYSrv-cKkqWH0mYy07HsTw&callback=initMap"></script>
     <script src="js/google-map.js"></script>
     <script>var vid = document.getElementById("bgvid-hero"); function enableMute() { vid.muted = true; }</script>
 </body>
