--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         crossorigin="anonymous">
     <link href="css/magnific-popup.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
+    <script src="https://booking-widget.phorestcdn.com/obwidget.bundle.js"></script>
 </head>
 
 <body>
@@ -282,6 +283,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAn2uF77HRDupYSrv-cKkqWH0mYy07HsTw&callback=initMap"></script>
     <script src="js/google-map.js"></script>
     <script>var vid = document.getElementById("bgvid-hero"); function enableMute() { vid.muted = true; }</script>
+    <script>
+        window.widget = new OBWidget('hilary1')
+    </script>
 </body>
 
 </html>
