--- a/index.html
+++ b/index.html
@@ -225,7 +225,13 @@
                         <li>
                             <i class="fa fa-map-marker"></i> 59 Ranelagh Dublin 6 D06 E2C2</li>
                         <li>
-                            <i class="fa fa-phone"></i> 01-123-4567</li>
+                            
+                            <a href="tel:+35314417168">
+                                <i class="fa fa-phone"></i> +353 1 441 7168</li>                                
+                            </a>
+                            <a href="tel:+35315473623">
+                                <i class="fa fa-phone"></i> +353 1 547 3623</li>
+                            </a><br>
                     </ul>
                 </p>
             </header>
