--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </nav>
         <div class="welcome-message text-center">
-            <button onclick="enableMute()" type="button" class="btn btn-primary">Mute sound</button>
+            <button onclick="enableMute()" type="button" class="btn btn-primary"><i class="fa fa-volume-off"></i> Sound</button>
             <div class="yt-play-btn">
                 <a href="https://www.youtube.com/watch?v=45zYANoAshY" onclick="enableMute();return false;" class="play litebox-hero">
                     <img src="img/32px-YouTube_play_button_circular_(2013-2017).svg.png" alt="play"> </a>
