--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="col-md-6">
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/IeHillary" target="_blank">
+                            <a href="https://twitter.com/Hillary_ie" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
